test/deriver/errors/unsupported_type_poly.expected
File "_none_", line 1:
Warning 46: illegal environment variable OCAML_COLOR : expected "auto", "always" or "never"
File "unsupported_type_poly.ml", line 1, characters 0-42:
1 | type t = { v : 'a. 'a } [@@deriving irmin]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_irmin: universally-quantified type 'a . 'a encountered. Irmin types must be grounded.
